--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -2,8 +2,17 @@
 @tailwind components;
 @tailwind utilities;
 
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
+@font-face {
+  font-family: vazir;
+  src: url(../public/Vazir.ttf);
+}
 
+
+
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;700&display=swap");
+*{
+  font-family: 'vazir';
+}
 html,
 body {
   padding: 0;
@@ -24,6 +33,7 @@ body {
     background-position: 50% 50%;
     background-repeat: no-repeat;
     background-size: cover;
+    
   }
 }
 
